- [Refactor] IOUtil: Replace URL with URI for resource streams - [Fix] IOUtil: Add URISyntaxException handling - [Add] IOUtil: Assertions for non-null streams - [Fix] GlfwContextProvider: Add null check assertion on image buffer - [Refactor] Input: Remove unnecessary newline - [Refactor] GlfwContextProvider: Simplify position initialization - [Refactor] GraphicsContext: Enhance documentation with HTML formatting